[gd_scene load_steps=12 format=3 uid="uid://1gft2x8y73sr"]

[ext_resource type="Script" uid="uid://cwm017fqqr0xj" path="res://scripts/pause.gd" id="1_8v81o"]
[ext_resource type="FontFile" uid="uid://4ivejuabvoq3" path="res://Game Bubble.ttf" id="1_wcpj6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ep5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcpj6"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v81o"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hdb6x"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uc2tp"]
bg_color = Color(0.65834, 0.65834, 0.65834, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qp6fb"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7akkw"]
bg_color = Color(0.20871, 0.20871, 0.20871, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5f6b"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87awh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8v81o")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.0
offset_top = -233.5
offset_right = 476.0
offset_bottom = 233.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -101.5
offset_right = 183.0
offset_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Pauze" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_wcpj6")
theme_override_font_sizes/font_size = 60
text = "Pauzė"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_0ep5p")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_wcpj6")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8v81o")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_hdb6x")
theme_override_styles/hover = SubResource("StyleBoxFlat_uc2tp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_qp6fb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7akkw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_w5f6b")
theme_override_styles/normal = SubResource("StyleBoxFlat_87awh")
text = "Grįžti"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_0ep5p")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_wcpj6")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8v81o")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_hdb6x")
theme_override_styles/hover = SubResource("StyleBoxFlat_uc2tp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_qp6fb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7akkw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_w5f6b")
theme_override_styles/normal = SubResource("StyleBoxFlat_87awh")
text = "Nustatymai"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_0ep5p")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_wcpj6")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_8v81o")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_hdb6x")
theme_override_styles/hover = SubResource("StyleBoxFlat_uc2tp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_qp6fb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7akkw")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_w5f6b")
theme_override_styles/normal = SubResource("StyleBoxFlat_87awh")
text = "Išeiti"

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
